add docker service

--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -5,8 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //"AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=localhost,1433;Database=Northwind;User Id=sa;Password=MyN3wP@ssword;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  //}
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-IUUO58L\\SQLEXPRESS;Database=Northwind;User Id=sa;Password=london4567;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Northwind;User Id=sa;Password=MyN3wP@ssword;TrustServerCertificate=True;MultipleActiveResultSets=true"
+
   }
   //"AllowedHosts": "*",
   //"ConnectionStrings": {
