--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,27 @@
 services:
+  webapplication:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "5000:80"
+    depends_on:
+      - sqlserver
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    networks:
+      - app-network
+
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: sqlserver-northwind
     environment:
-      - ACCEPT_EULA=Y
-      - SA_PASSWORD=London4567!
+      SA_PASSWORD: "MyN3wP@ssword"
+      ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
-    volumes:
-      - sql_data:/var/opt/mssql
-      - ./scripts:/scripts
-    command: /bin/bash -c "(/opt/mssql/bin/sqlservr &) && sleep 20 && /scripts/init-db.sh"
+    networks:
+      - app-network
 
-volumes:
-  sql_data:
+networks:
+  app-network:
+    driver: bridge
