--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,12 @@ services:
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
     environment:
-      SA_PASSWORD: "MyN3wP@ssword"
+      MSSQL_SA_PASSWORD: "MyN3wP@ssword"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
+    volumes:
+      - sqlserverdata:/var/opt/mssql
     networks:
       - app-network
 
@@ -35,3 +37,6 @@ services:
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  sqlserverdata:
